--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.12"
 psycopg2 = "^2.9.9"
 django = "^4.2.7"
 djangorestframework = "^3.14.0"
+djangorestframework-simplejwt = "^5.3.0"
+requests = "^2.31.0"
 
 
 [tool.poetry.group.dev.dependencies]
