--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ django = "^4.2.7"
 djangorestframework = "^3.14.0"
 djangorestframework-simplejwt = "^5.3.0"
 requests = "^2.31.0"
+drf-yasg = "^1.21.7"
 
 
 [tool.poetry.group.dev.dependencies]
