--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ djangorestframework = "^3.14.0"
 djangorestframework-simplejwt = "^5.3.0"
 requests = "^2.31.0"
 drf-yasg = "^1.21.7"
+django-cors-headers = "^4.3.1"
 
 
 [tool.poetry.group.dev.dependencies]
