--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ djangorestframework-simplejwt = "^5.3.0"
 requests = "^2.31.0"
 drf-yasg = "^1.21.7"
 django-cors-headers = "^4.3.1"
+celery = "^5.3.6"
+redis = "^5.0.1"
+django-celery-beat = "^2.5.0"
+eventlet = "^0.33.3"
 
 
 [tool.poetry.group.dev.dependencies]
