--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ celery = "^5.3.6"
 redis = "^5.0.1"
 django-celery-beat = "^2.5.0"
 eventlet = "^0.33.3"
+pytest = "^7.4.3"
 
 
 [tool.poetry.group.dev.dependencies]
