--- a/.env-non-dev.sample
+++ b/.env-non-dev.sample
@@ -1,6 +1,11 @@
 SECRET_KEY=
 DOMAIN_NAME=
+DB_HOST=
+DATABASES_USER=
 DATABASES_PASSWORD=
-EMAIL_HOST_USER=
-EMAIL_HOST_PASSWORD=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+CACHES_LOCATION=
 TELEGRAM_API_TOKEN=
+CELERY_BROKER_HOST=
