--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,8 @@
 SECRET_KEY=
 DOMAIN_NAME=
+DB_HOST=
+DATABASES_USER=
 DATABASES_PASSWORD=
-EMAIL_HOST_USER=
-EMAIL_HOST_PASSWORD=
+CACHES_LOCATION=
 TELEGRAM_API_TOKEN=
+CELERY_BROKER_HOST=
