--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,11 @@ services:
   db:
     image: postgres:15
     container_name: atomic_habits_db
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
     volumes:
       - postgresdata:/var/lib/postgresql/data
     env_file:
@@ -22,8 +27,8 @@ services:
     env_file:
       - .env-non-dev
     depends_on:
-      - db
-      - redis
+      db:
+        condition: service_healthy
     command:
       - "docker/app.sh"
     ports:
