--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ PyJWT==2.8.0
 pytest==7.4.3
 python-crontab==3.0.0
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 pytz==2023.3.post1
 PyYAML==6.0.1
 redis==5.0.1
